--- a/escom-bpm-web/src/main/webapp/view/companies/departaments/department-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/companies/departaments/department-explorer.xhtml
@@ -7,7 +7,7 @@
     
     <ui:param name="_bean" value="#{explorerTreeBean}" />
     <ui:param name="_rootBean" value="#{companyBean}"/>
-    <ui:param name="_detailBean" value="#{staffBean}"/> 
+    <ui:param name="_detailBean" value="#{departmentBean}"/> 
     <ui:param name="_treeBean" value="#{departmentBean}"/> 
     <ui:param name="_searcheBean" value="#{_treeBean}"/>
     
