--- a/escom-bpm-web/src/main/webapp/view/processes/monitor.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/monitor.xhtml
@@ -24,7 +24,7 @@
         <p:defaultCommand target="mainFRM:btnSearche" />
                 
         <p:panel toggleable="true" header="#{bundle.Filter}" toggleSpeed="500" >
-            <p:panelGrid columns="4" columnClasses="ui-grid-col-6 ui-grid-col-5 ui-grid-col-1" styleClass="without-spaces">
+            <h:panelGrid columns="4" styleClass="without-spaces">
                 <p:panelGrid columns="1" styleClass="without-spaces">
                     <p:outputLabel value="#{bundle.Initiator}:" />
                     <ui:include src="/view/common/item-select-list-btn.xhtml" >
@@ -96,7 +96,11 @@
                     </p:selectManyMenu>
                 </h:panelGrid>
 
-            </p:panelGrid>
+                <p:commandButton icon="ui-icon-search" value="#{bundle.Find}"
+                         actionListener="#{monitorBean.onRefreshData()}">
+                </p:commandButton>
+                
+            </h:panelGrid>
         </p:panel>
 
         <p:treeTable id="monitorTable" value="#{monitorBean.root}" var="item" 
