--- a/escom-bpm-web/src/main/webapp/view/companies/company-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/companies/company-explorer.xhtml
@@ -7,7 +7,7 @@
        
     <ui:param name="_bean" value="#{companyExplBean}"/>
     <ui:param name="_treeBean" value="#{companyBean}" />
-    <ui:param name="_detailBean" value="#{departmentBean}" />
+    <ui:param name="_detailBean" value="#{companyBean}" />
     <ui:param name="_searcheBean" value="#{_treeBean}"/>
     
     <ui:param name="_selectorHeader" value="#{_bean.getLabelFromBundle('CompanySelector')}"/>
