--- a/escom-bpm-web/src/main/webapp/view/common/drag-drop-dlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/drag-drop-dlg.xhtml
@@ -77,5 +77,18 @@
                          onclick="PF('MoveTblDlg').hide();"
                          oncomplete="initDND()"/>
     </p:confirmDialog>
-        
+    <p:confirmDialog widgetVar="CreateProcessDlg" closeOnEscape="true" global="true" severity="info" header="#{bundle.CreateProcess}" message="#{bundle.ConfirmAction}"  showEffect="fade" hideEffect="fade">
+            <p:commandButton value="#{bundle.CreateProcess}" process="@this"
+                             styleClass="ui-confirmdialog-yes" icon="ui-icon-check"
+                             actionListener="#{_bean.createProcess()}"
+                             update="mainFRM #{_updates}"
+                             onclick="PF('CreateProcessDlg').hide();"
+                             oncomplete="initDND()">
+            </p:commandButton>
+            <p:commandButton value="#{bundle.Cancel}" process="@this" 
+                             styleClass="ui-confirmdialog-no" icon="ui-icon-close"
+                             update="mainFRM"
+                             onclick="PF('CreateProcessDlg').hide();"
+                             oncomplete="initDND()"/>
+    </p:confirmDialog>
 </ui:composition>
