--- a/escom-bpm-web/src/main/webapp/view/services/common/sheduler.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/services/common/sheduler.xhtml
@@ -12,7 +12,7 @@
                              disabled="#{_bean.service.started}" rendered="#{_bean.scheduler.autoStart}"
                              actionListener="#{_bean.onStartService()}"
                              update="mainFRM:westFRM"
-                             onclick="document.getElementById('mainFRM:btnEastSaves').click();">
+                             onclick="document.getElementById('mainFRM:btnAllSave').click();">
                     <f:param name="isRequired" value="true"/>
                 </p:commandButton>
                 <p:commandButton title="#{bundle.Stop}" icon="ui-icon-stop"
@@ -27,7 +27,7 @@
                 <p:commandButton icon="ui-icon-play" title="#{bundle.StartImmediately}"
                              actionListener="#{_bean.doRunService()}"
                              disabled="#{_bean.service.started}"
-                             onclick="document.getElementById('mainFRM:btnEastSave').click();"
+                             onclick="document.getElementById('mainFRM:btnAllSave').click();"
                              onstart="PF('statusDialog').show()"
                              oncomplete="PF('statusDialog').hide();"
                              update="mainFRM:centerFRM, logFRM">
