--- a/escom-bpm-web/src/main/webapp/view/tasks/task-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/tasks/task-card.xhtml
@@ -9,32 +9,8 @@
     
     <ui:define name="specActionMenu" >
     </ui:define>
-
-    <ui:define name="form_scripts"> 
-        <script>
-            function sendResult(result) {
-                saveResult([                  
-                    {name: 'result', value: result}
-                ]);
-            }
-        </script>
-        <p:remoteCommand name="saveResult" actionListener="#{taskCardBean.onExecute()}"  />
-    </ui:define>
     
-    <ui:define name="CardToolButtons" > 
-        <p:commandButton id="btnRun" style="display: none;"
-                         action="#{taskCardBean.onExecute()}" ajax="false">
-               <f:param name="isRequired" value="true"/>
-        </p:commandButton>
-        
-        <ui:repeat value="#{taskCardBean.taskResults}" var="result" rendered="#{taskCardBean.isShowBtnResults()}" >
-            <p:commandButton value="#{resultBean.getLabelFromBundle(result.getName())}" type="button" 
-                             update="mainFRM"
-                             icon="#{'ico_'.concat(result.getIconName())}"
-                             disabled="#{!taskCardBean.haveRightExec}"                           
-                             onclick="sendResult('#{result.getName()}');">                         
-            </p:commandButton>
-        </ui:repeat>
+    <ui:define name="CardToolButtons" >        
     </ui:define>
     
     <ui:define name="page_body">
@@ -202,16 +178,29 @@
         </p:tab>
 
         <p:tab title="#{bundle.Execution}" rendered="#{taskCardBean.editedItem.state.currentState.id ne DictStates.STATE_DRAFT}">
-            <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces">                   
+            <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces"> 
+                <ui:repeat value="#{taskCardBean.taskResults}" var="result" rendered="#{taskCardBean.isShowBtnResults()}" >
+                    <p:commandButton value="#{resultBean.getLabelFromBundle(result.getName())}" 
+                                     update="mainFRM"
+                                     icon="#{'ico_'.concat(result.getIconName())}"
+                                     disabled="#{!taskCardBean.haveRightExec}"  
+                                     actionListener="#{taskCardBean.onExecute(result.getName())}">
+                        <f:param name="isRequired" value="true"/>
+                    </p:commandButton>
+                </ui:repeat>
+                
+                <p:outputLabel value="#{bundle.ReportExe}:" indicateRequired="true"/>                
                 <p:textEditor value="#{taskCardBean.editedItem.comment}" 
                               readonly="#{taskCardBean.typeEdit eq DictEditMode.VIEW_MODE
                                           or !taskCardBean.haveRightExec
                                           or taskCardBean.editedItem.state.currentState.id ne DictStates.STATE_RUNNING }"
                               height="300" styleClass="ui-grid-col-12"/> 
+                
                 <h:panelGroup rendered="#{taskCardBean.editedItem.reports.size() > 1}" styleClass="without-spaces">
                     <p:outputLabel value="#{bundle.ReportsExe}:"/>
-                    <ui:include src="/view/tasks/reports.xhtml" />
-                </h:panelGroup>
+                    <ui:include src="/view/tasks/reports.xhtml"/>
+                </h:panelGroup>                
+                
             </p:panelGrid>
         </p:tab>
             
