--- a/escom-bpm-web/src/main/webapp/view/common/dict-log.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/dict-log.xhtml
@@ -5,8 +5,8 @@
                  xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <p:tab title="#{bundle.LogEventHistory}" rendered="#{!_bean.simpleCard()}">
-        <p:panelGrid columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-panelgrid-blank ui-grid-col-12">
-            <p:dataTable id="logTbl" var="log" value="#{_bean.editedItem.itemLogs}" 
+        <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces">
+            <p:dataTable id="logTbl" var="log" value="#{_bean.itemLogs}" lazy="true"
                          emptyMessage="#{bundle.EmptyTable}"
                          paginator="true" paginatorPosition="bottom"  
                          tableStyle="table-layout: auto;" styleClass="ui-grid-col-12 col-padding"
