--- a/jasper_reports/concorder-list.jrxml
+++ b/jasper_reports/concorder-list.jrxml
@@ -6,6 +6,10 @@
 	<parameter name="REPORT_TITLE" class="java.lang.String"/>
 	<parameter name="DOC_NAME" class="java.lang.String"/>
 	<parameter name="DOC_NUMBER" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="CURATOR_NAME" class="java.lang.String"/>
+	<parameter name="PROCESS_NUMBER" class="java.lang.String"/>
+	<parameter name="PROCESS_DATE" class="java.lang.String"/>
+	<parameter name="PARTNER_NAME" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -16,46 +20,73 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="41" splitType="Stretch">
-			<textField isBlankWhenNull="true">
-				<reportElement x="0" y="0" width="555" height="40" backcolor="#FFB000" uuid="b2ae284f-78bf-47f6-aacd-be09492b731b"/>
-				<box>
-					<bottomPen lineWidth="1.0"/>
-				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="SansSerif" size="20" isBold="true"/>
+		<band height="21" splitType="Stretch">
+			<textField>
+				<reportElement x="455" y="0" width="100" height="20" uuid="a6052110-7eae-4276-936c-269d83aa62c5"/>
+				<textElement>
+					<font isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{REPORT_TITLE}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{PROCESS_NUMBER}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="1" y="0" width="100" height="20" uuid="ffc118cd-2bc1-4448-9e1a-7b63c0a0427b"/>
+				<textElement>
+					<font isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{PROCESS_DATE}]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="68">
+		<band height="91">
 			<textField>
-				<reportElement x="76" y="20" width="479" height="20" uuid="5ec4ebdf-4407-4ff4-9bd6-a0c2c7b4f2fd"/>
-				<textElement>
-					<font fontName="SansSerif" size="12"/>
+				<reportElement x="0" y="23" width="555" height="20" uuid="5ec4ebdf-4407-4ff4-9bd6-a0c2c7b4f2fd"/>
+				<box>
+					<pen lineWidth="0.0"/>
+					<topPen lineWidth="0.0"/>
+					<leftPen lineWidth="0.0"/>
+					<bottomPen lineWidth="1.0"/>
+					<rightPen lineWidth="0.0"/>
+				</box>
+				<textElement textAlignment="Center">
+					<font fontName="SansSerif" size="12" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{DOC_NAME}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="20" width="76" height="20" uuid="86b297de-449f-49b1-97fb-ac3afa1287b4"/>
-				<textElement>
-					<font fontName="SansSerif" size="12"/>
+				<reportElement mode="Transparent" x="0" y="63" width="555" height="20" uuid="d335a17e-05a1-4efd-a666-f59055229d35"/>
+				<box>
+					<bottomPen lineWidth="1.0"/>
+				</box>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Документ:"]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{CURATOR_NAME}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="76" y="40" width="135" height="20" uuid="c7509848-cf8f-43b6-846d-c498e207d235"/>
-				<textElement>
-					<font fontName="SansSerif" size="12"/>
+				<reportElement x="0" y="43" width="555" height="20" uuid="887fd4e2-4230-4356-aae3-d46ed21de8f9"/>
+				<box>
+					<bottomPen lineWidth="1.0"/>
+				</box>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{DOC_NUMBER}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{PARTNER_NAME}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="0" y="0" width="555" height="23" backcolor="#FFB000" uuid="b2ae284f-78bf-47f6-aacd-be09492b731b"/>
+				<box>
+					<bottomPen lineWidth="0.0"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="SansSerif" size="12" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{REPORT_TITLE}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="23">
+		<band height="22">
 			<staticText>
 				<reportElement x="0" y="0" width="289" height="22" uuid="1d27e885-df21-4a3f-82ed-c51ef6ba06d1"/>
 				<box>
@@ -68,7 +99,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="SansSerif" size="10" isBold="false"/>
 				</textElement>
-				<text><![CDATA[Согласующий Ф.И.О., должность]]></text>
+				<text><![CDATA[Должность визирующего Ф.И.О.]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Transparent" x="289" y="0" width="65" height="22" forecolor="#000000" backcolor="#FFFFFF" uuid="92137f4f-3b4c-4d98-a971-3ebe92b41ce0"/>
@@ -96,7 +127,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="SansSerif" size="10"/>
 				</textElement>
-				<text><![CDATA[Статус]]></text>
+				<text><![CDATA[Виза]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="456" y="0" width="99" height="22" uuid="6140e385-62ed-4093-a083-a4785d838bef"/>
