--- a/jasper_reports/partner-card.jrxml
+++ b/jasper_reports/partner-card.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Карточка объекта" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="91b4b311-f2c8-4859-84d1-54d518bf3415">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Карточка контрагента" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="91b4b311-f2c8-4859-84d1-54d518bf3415">
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -11,6 +11,8 @@
 	<field name="name" class="java.lang.String"/>
 	<field name="dateCreate" class="java.util.Date"/>
 	<field name="author.shortFIO" class="java.lang.String"/>
+	<field name="type.name" class="java.lang.String"/>
+	<field name="fullName" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -35,19 +37,19 @@
 		</band>
 	</title>
 	<pageHeader>
-		<band height="35" splitType="Stretch"/>
+		<band height="15" splitType="Stretch"/>
 	</pageHeader>
 	<detail>
-		<band height="125" splitType="Stretch">
+		<band height="153" splitType="Stretch">
 			<textField>
-				<reportElement x="76" y="80" width="455" height="20" uuid="f33dd4f5-5c6f-471b-aa83-1139a20b260d"/>
+				<reportElement x="100" y="133" width="455" height="20" uuid="f33dd4f5-5c6f-471b-aa83-1139a20b260d"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="SansSerif" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{author.shortFIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="80" width="76" height="20" uuid="ed7b6513-d4cb-4fbf-a3ac-5128939bf2a3"/>
+				<reportElement x="0" y="133" width="100" height="20" uuid="ed7b6513-d4cb-4fbf-a3ac-5128939bf2a3"/>
 				<box>
 					<topPen lineWidth="0.0"/>
 					<leftPen lineWidth="0.0"/>
@@ -60,7 +62,7 @@
 				<text><![CDATA[Автор]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="0" y="60" width="76" height="20" forecolor="#000000" backcolor="#FFFFFF" uuid="92137f4f-3b4c-4d98-a971-3ebe92b41ce0"/>
+				<reportElement mode="Transparent" x="0" y="113" width="100" height="20" forecolor="#000000" backcolor="#FFFFFF" uuid="92137f4f-3b4c-4d98-a971-3ebe92b41ce0"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle" rotation="None" markup="none">
 					<font fontName="SansSerif" size="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
 					<paragraph lineSpacing="Single"/>
@@ -68,14 +70,14 @@
 				<text><![CDATA[Дата создания]]></text>
 			</staticText>
 			<textField pattern="dd.MM.yyyy HH:mm">
-				<reportElement x="76" y="60" width="157" height="20" uuid="301c1945-c8c0-4db1-a3e1-102c164f91ad"/>
+				<reportElement x="100" y="113" width="157" height="20" uuid="301c1945-c8c0-4db1-a3e1-102c164f91ad"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="SansSerif" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{dateCreate}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="0" width="100" height="20" uuid="1d27e885-df21-4a3f-82ed-c51ef6ba06d1"/>
+				<reportElement x="0" y="22" width="100" height="20" uuid="1d27e885-df21-4a3f-82ed-c51ef6ba06d1"/>
 				<box>
 					<topPen lineWidth="0.0"/>
 					<leftPen lineWidth="0.0"/>
@@ -88,16 +90,58 @@
 				<text><![CDATA[Наименование]]></text>
 			</staticText>
 			<textField pattern="" isBlankWhenNull="false">
-				<reportElement mode="Transparent" x="100" y="0" width="455" height="20" forecolor="#000000" backcolor="#FFFFFF" uuid="47e37ed9-461c-42b8-9cd8-dff2a585ecac"/>
+				<reportElement mode="Transparent" x="100" y="22" width="455" height="20" forecolor="#000000" backcolor="#FFFFFF" uuid="47e37ed9-461c-42b8-9cd8-dff2a585ecac"/>
 				<textElement textAlignment="Left" verticalAlignment="Top" rotation="None" markup="none">
 					<font fontName="SansSerif" size="12" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
 					<paragraph lineSpacing="Single"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{name}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="0" y="42" width="100" height="29" uuid="b07585b5-6132-482c-886b-747405d4c7f3"/>
+				<box>
+					<topPen lineWidth="0.0"/>
+					<leftPen lineWidth="0.0"/>
+					<bottomPen lineWidth="0.0"/>
+					<rightPen lineWidth="0.0"/>
+				</box>
+				<textElement>
+					<font fontName="SansSerif" size="12"/>
+				</textElement>
+				<text><![CDATA[Полное наименование]]></text>
+			</staticText>
+			<textField pattern="" isBlankWhenNull="false">
+				<reportElement mode="Transparent" x="100" y="42" width="455" height="29" forecolor="#000000" backcolor="#FFFFFF" uuid="f57f3176-5ebb-42cc-b8ba-3f7584354153"/>
+				<textElement textAlignment="Left" verticalAlignment="Top" rotation="None" markup="none">
+					<font fontName="SansSerif" size="12" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
+					<paragraph lineSpacing="Single"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{fullName}]]></textFieldExpression>
+			</textField>
 			<line>
-				<reportElement x="0" y="60" width="555" height="1" uuid="ca46cac5-6838-42de-a317-3c8a89b9e0f3"/>
+				<reportElement x="0" y="112" width="555" height="1" uuid="af819d14-b98d-4a87-9442-6d251862e89e"/>
 			</line>
+			<textField pattern="" isBlankWhenNull="false">
+				<reportElement mode="Transparent" x="100" y="2" width="455" height="20" forecolor="#000000" backcolor="#FFFFFF" uuid="adbc8e4d-0a2f-4aa8-a274-ddf07844998c"/>
+				<textElement textAlignment="Left" verticalAlignment="Top" rotation="None" markup="none">
+					<font fontName="SansSerif" size="12" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
+					<paragraph lineSpacing="Single"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{type.name}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="0" y="2" width="100" height="20" uuid="22a1f5ea-62bc-48cc-b19e-a07366fe0884"/>
+				<box>
+					<topPen lineWidth="0.0"/>
+					<leftPen lineWidth="0.0"/>
+					<bottomPen lineWidth="0.0"/>
+					<rightPen lineWidth="0.0"/>
+				</box>
+				<textElement>
+					<font fontName="SansSerif" size="12"/>
+				</textElement>
+				<text><![CDATA[Вид]]></text>
+			</staticText>
 		</band>
 	</detail>
 	<columnFooter>
