--- a/jasper_reports/staff-card.jrxml
+++ b/jasper_reports/staff-card.jrxml
@@ -3,10 +3,10 @@
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<style name="Title" fontName="Arial" fontSize="50" isBold="true"/>
-	<style name="SubTitle" forecolor="#736343" fontName="Arial" fontSize="18"/>
-	<style name="Column header" forecolor="#666666" fontName="Arial" fontSize="12" isBold="true"/>
-	<style name="Detail" fontName="Arial" fontSize="12"/>
+	<style name="Title" fontName="SansSerif" fontSize="50" isBold="true"/>
+	<style name="SubTitle" forecolor="#736343" fontName="SansSerif" fontSize="18"/>
+	<style name="Column header" forecolor="#666666" fontName="SansSerif" fontSize="12" isBold="true"/>
+	<style name="Detail" fontName="SansSerif" fontSize="12"/>
 	<style name="Row" mode="Transparent">
 		<conditionalStyle>
 			<conditionExpression><![CDATA[$V{REPORT_COUNT}%2 == 0]]></conditionExpression>
@@ -33,7 +33,7 @@
 			<textField>
 				<reportElement x="151" y="8" width="404" height="54" backcolor="#FFB000" uuid="06ae06ee-09c1-405b-a0d4-df1fcf5e44c9"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Arial" size="20" isBold="true" />
+					<font fontName="SansSerif" size="20" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{REPORT_TITLE}]]></textFieldExpression>
 			</textField>
@@ -60,56 +60,56 @@
 			<textField>
 				<reportElement x="100" y="35" width="455" height="20" uuid="e659c201-b11a-4447-9c2d-99afae8e6ae3"/>
 				<textElement>
-					<font fontName="Arial" size="12" />
+					<font fontName="SansSerif" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{employee.secondName}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="100" y="55" width="455" height="20" uuid="629cef02-5e53-4a58-97c5-5beaf3cc8dc5"/>
 				<textElement>
-					<font fontName="Arial" size="12" />
+					<font fontName="SansSerif" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{employee.firstName}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="100" y="75" width="455" height="20" uuid="f9cff47f-4252-44f0-ab37-0f493e286bc5"/>
 				<textElement>
-					<font fontName="Arial" size="12" />
+					<font fontName="SansSerif" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{employee.lastName}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="0" y="35" width="100" height="20" uuid="893f22c7-3c80-4f84-bbf8-7cc0bff4e947"/>
 				<textElement>
-					<font fontName="Arial" size="12" />
+					<font fontName="SansSerif" size="12"/>
 				</textElement>
 				<text><![CDATA[Фамилия:]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="0" y="55" width="100" height="20" uuid="00a41303-5856-4784-9402-7a69c7393023"/>
 				<textElement>
-					<font fontName="Arial" size="12" />
+					<font fontName="SansSerif" size="12"/>
 				</textElement>
 				<text><![CDATA[Имя:]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="0" y="75" width="100" height="20" uuid="12639fb7-6b9e-4037-86a3-8e873406be6a"/>
 				<textElement>
-					<font fontName="Arial" size="12" />
+					<font fontName="SansSerif" size="12"/>
 				</textElement>
 				<text><![CDATA[Отчество:]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="100" y="0" width="455" height="20" uuid="5456b27a-0f0b-4e74-840d-910774ed3658"/>
 				<textElement>
-					<font size="14" />
+					<font size="14"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{post.name}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="0" y="0" width="100" height="20" uuid="84b6f93d-c5f0-4b44-943e-f8e9e40f04bc"/>
 				<textElement>
-					<font fontName="Arial" size="14" isBold="false" />
+					<font fontName="SansSerif" size="14" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Должность:]]></text>
 			</staticText>
@@ -126,28 +126,28 @@
 			<textField>
 				<reportElement x="411" y="0" width="104" height="20" uuid="118bb21f-263e-438b-a88c-efeef4313754"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
-					<font size="7" />
+					<font size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Страница "+$V{PAGE_NUMBER}+" из"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
 				<reportElement x="515" y="0" width="40" height="20" uuid="b0925e84-efd3-473c-895e-8cb1ac897f4a"/>
 				<textElement verticalAlignment="Middle">
-					<font size="7" />
+					<font size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy HH.mm.ss">
 				<reportElement x="0" y="1" width="134" height="19" uuid="f90279cf-d664-4e37-a7ff-23f4164fe6b9"/>
 				<textElement verticalAlignment="Middle">
-					<font size="7" />
+					<font size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Распечатано в системе ESCOM.BPM :"]]></textFieldExpression>
 			</textField>
 			<textField pattern="EEE, d MMM yyyy HH:mm:ss Z">
 				<reportElement x="134" y="0" width="123" height="20" uuid="6968eeb5-6050-457f-9b5c-c10c544d3545"/>
 				<textElement verticalAlignment="Middle">
-					<font size="7" />
+					<font size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
